--- a/src/index.css
+++ b/src/index.css
@@ -70,3 +70,40 @@ td:last-child {
   font-weight: bold;
   color: green;
 }
+
+.login-box {
+  margin: 50px auto;
+  width: 400px;
+  padding: 40px;
+  background-color: #e8f3f7;
+  text-align: center;
+  border-radius: 50px;
+  box-shadow: 5px 5px 20px #000;
+}
+
+.login-box input,
+select {
+  display: block;
+  margin: 20px auto;
+  /* border: 1px solid black; */
+  width: 100%;
+  padding: 5px;
+  background-color: white;
+  text-transform: uppercase;
+  box-shadow: 5px 5px 20px #000;
+}
+
+.login-box input{
+  color: white;
+  background-color: #1178c5;
+  border: none;
+  border-radius: 10px;
+  font-weight: bold;
+}
+
+.login-image {
+  margin-top: 10px;
+  width: 200px;
+  border-radius: 30px;
+  box-shadow: 5px 5px 20px #000;
+}
