--- a/src/index.css
+++ b/src/index.css
@@ -40,7 +40,7 @@ li {
   margin: 10px;
 }
 
-.user-score {
+.user-info {
   width: 100%;
   max-width: 600px;
   padding: 10px;
@@ -93,7 +93,7 @@ select {
   box-shadow: 5px 5px 20px #000;
 }
 
-.login-box input{
+.login-box input {
   color: white;
   background-color: #1178c5;
   border: none;
@@ -106,4 +106,20 @@ select {
   width: 200px;
   border-radius: 30px;
   box-shadow: 5px 5px 20px #000;
+}
+
+.tab {
+  margin: 0 auto;
+  width: 600px;
+}
+
+.answer-info {
+  width: 300px;
+  padding: 10px;
+}
+
+.answer-image {
+  max-width: 100px;
+  text-align: center;
+  font-weight: bold;
 }
