--- a/src/index.css
+++ b/src/index.css
@@ -164,3 +164,12 @@ select {
   border: 2px solid green;
   background-color: rgb(191, 245, 191);
 }
+
+.new-question {
+  margin: 0 auto;
+  width: 500px;
+  border: 2px solid teal;
+  border-radius: 30px;
+  padding: 30px;
+  box-shadow: 3px 3px 20px teal;
+}
